--- a/marker.css
+++ b/marker.css
@@ -6,3 +6,24 @@
   border-radius: 1px;
   position: absolute;
 }
+
+#marker-ic span {
+	display: block;
+	float: left;
+	width: 16px;
+	height: 16px;
+	margin: 3px;
+}
+
+#marker-ic .good {
+	background: transparent url('icons/good.png') 0 0 no-repeat;
+}
+#marker-ic .meh {
+	background: transparent url('icons/meh.png') 0 0 no-repeat;
+}
+#marker-ic .bad {
+	background: transparent url('icons/bad.png') 0 0 no-repeat;
+}
+#marker-ic .facebook {
+	background: transparent url('icons/facebook.png') 0 0 no-repeat;
+}
