--- a/marker.css
+++ b/marker.css
@@ -25,5 +25,5 @@
 	background: transparent url('icons/bad.png') 0 0 no-repeat;
 }
 #marker-ic .facebook {
-	background: transparent url('icons/facebook.png') 0 0 no-repeat;
+	background: transparent url('icons/facebook.gif') 0 0 no-repeat;
 }
